launch animation completed!

--- a/app/src/main/res/drawable/ic_app_trans.xml
+++ b/app/src/main/res/drawable/ic_app_trans.xml
@@ -4,23 +4,21 @@
     android:height="512dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
-  <path
-      android:pathData="M256,256m-256,0a256,256 0,1 1,512 0a256,256 0,1 1,-512 0"
-      android:fillColor="#00636978"/>
-  <path
-      android:pathData="m274.274,511.358c126.832,-8.945 228.157,-110.281 237.086,-237.118l-77.829,-78.102 -4.034,-3.761 -218.26,45.307 -101.074,-44.689 -35.981,118.27 4.818,5.122z"
-      android:fillColor="#00636978"/>
 
   <path
+      android:name="YELLOW"
       android:pathData="m287.813,255.994 l14.988,14.994c8.268,8.268 21.721,8.268 29.988,0 4.006,-4.006 6.211,-9.33 6.211,-14.994l22.5,-20 22.5,20c0,17.684 -6.887,34.311 -19.391,46.814 -12.504,12.504 -29.131,19.391 -46.814,19.391 -17.686,0 -34.311,-6.887 -46.814,-19.391l-46.781,-46.813c0.004,-0.002 31.801,-20.002 31.801,-20.002zM287.813,255.994"
-      android:fillColor="#FFBF00"/>
+      />
   <path
+      android:name="RED"
       android:pathData="m287.799,255.994 l-46.779,-46.814c-12.504,-12.504 -29.129,-19.391 -46.814,-19.391 -17.684,0 -34.311,6.887 -46.814,19.391 -12.504,12.506 -19.391,29.131 -19.391,46.814l22.5,25 22.5,-25c0,-5.664 2.205,-10.988 6.211,-14.994 8.268,-8.268 21.721,-8.268 29.99,0l14.99,14.99c-0.004,0.004 63.607,0.004 63.607,0.004zM287.799,255.994"
-      android:fillColor="#FF0000"/>
+      />
   <path
+      android:name="GREEN"
       android:pathData="m364.609,209.18c-12.504,-12.504 -29.131,-19.391 -46.814,-19.391 -17.686,0 -34.311,6.887 -46.814,19.391l-14.98,14.992l0,63.646l46.801,-46.818c8.268,-8.268 21.721,-8.268 29.988,0 4.006,4.006 6.211,9.33 6.211,14.994l45,0c0,-17.684 -6.887,-34.309 -19.391,-46.814zM364.609,209.18"
-      android:fillColor="#3E9C42"/>
+      />
   <path
+      android:name="BLUE"
       android:pathData="m209.199,270.988c-8.268,8.268 -21.721,8.268 -29.988,0 -4.006,-4.006 -6.211,-9.33 -6.211,-14.994l-45,0c0,17.684 6.887,34.311 19.391,46.814 12.504,12.504 29.131,19.391 46.814,19.391 17.686,0 34.311,-6.887 46.814,-19.391l14.98,-14.99l0,-63.646zM209.199,270.988"
-      android:fillColor="#03A9F4"/>
+      />
 </vector>
