--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -43,6 +43,6 @@
     <fragment
         android:id="@+id/nav_cesko"
         android:name="com.example.ipolitician.nav.cesko.CeskoFragment"
-        android:label="fragment_cesko"
+        android:label="Cesko"
         tools:layout="@layout/fragment_cesko" />
 </navigation>
