--- a/app/src/main/res/layout/fragment_problem_post.xml
+++ b/app/src/main/res/layout/fragment_problem_post.xml
@@ -9,12 +9,12 @@
     <EditText
         android:id="@+id/problem_post"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="170dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="64dp"
         android:ems="10"
-        android:gravity="start|top"
+        android:gravity="bottom|start"
         android:inputType="textMultiLine"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
