--- a/app/src/main/res/layout/fragment_problems.xml
+++ b/app/src/main/res/layout/fragment_problems.xml
@@ -95,4 +95,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
+    <View
+        android:id="@+id/blurViewProb"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/blur_background"
+        android:clickable="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
