--- a/app/src/main/res/layout/fragment_public_pager.xml
+++ b/app/src/main/res/layout/fragment_public_pager.xml
@@ -46,6 +46,7 @@ tools:context=".nav.publics.PublicFragment">
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="350dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +60,7 @@ tools:context=".nav.publics.PublicFragment">
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:text="Gender"
+            android:text="@string/gender"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -85,7 +86,7 @@ tools:context=".nav.publics.PublicFragment">
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:text="Region"
+            android:text="@string/region"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -111,7 +112,7 @@ tools:context=".nav.publics.PublicFragment">
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:text="Age"
+            android:text="@string/age"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -136,8 +137,9 @@ tools:context=".nav.publics.PublicFragment">
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginLeft="12dp"
                     android:ems="10"
-                    android:hint="from"
+                    android:hint="@string/from"
                     android:inputType="number"
                     android:textColor="?attr/textClr"
                     android:textColorHint="?attr/toolsClr"/>
@@ -156,9 +158,10 @@ tools:context=".nav.publics.PublicFragment">
                     android:id="@+id/ageTo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="12dp"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:hint="to"
+                    android:hint="@string/to"
                     android:inputType="number"
                     android:textColor="?attr/textClr"
                     android:textColorHint="?attr/toolsClr"/>
@@ -175,7 +178,7 @@ tools:context=".nav.publics.PublicFragment">
             android:layout_marginBottom="12dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/button_background_shape"
-            android:text="FILTER"
+            android:text="@string/filter"
             android:textSize="18sp" />
         </LinearLayout>
 </ScrollView>
