--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -27,10 +27,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="tell us how you think and we'll show which political party is suitable best for you"
+        android:text="დააფიქსირეთ თქვენი შეხედულებები და გაიგეთ რომელი პარტია არის თქვენი შესაფერისი"
         android:textAlignment="center"
         android:textColor="#009688"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +60,9 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_background_shape"
         android:fontFamily="sans-serif"
-        android:text="Changed your mind?"
+        android:text="@string/changed_your_mind"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="21sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
