--- a/app/src/main/res/layout/holder_election.xml
+++ b/app/src/main/res/layout/holder_election.xml
@@ -43,8 +43,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_background_shape"
-        android:text="VOTE"
-        android:textSize="14sp"
+        android:text="@string/vote"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
