--- a/app/src/main/res/layout/custom_search_view.xml
+++ b/app/src/main/res/layout/custom_search_view.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:ems="15"
-        android:hint="Seach"
+        android:hint="@string/search"
         android:inputType="textPersonName"
         android:singleLine="true"
         android:textColor="?attr/textClr"
