--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -63,21 +63,21 @@
 
             <Button
                 android:id="@+id/loginBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/tl_rounded_component"
                 android:backgroundTint="@color/lightComponentColor"
-                android:text="Log in" />
+                android:text="@string/log_in" />
 
             <Button
                 android:id="@+id/signUpBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/tr_rounded_component"
                 android:backgroundTint="@color/lightBackground"
-                android:text="Sign Up" />
+                android:text="@string/sign_up" />
         </LinearLayout>
 
         <LinearLayout
@@ -97,8 +97,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:paddingLeft="8dp"
-                android:text="Personal Number"
+                android:paddingLeft="12dp"
+                android:text="@string/personal_number"
                 android:textColor="@color/lightTextColor"
                 android:textSize="15sp" />
 
@@ -113,7 +113,7 @@
                 android:backgroundTint="@color/lightBackground"
                 android:ems="10"
                 android:fontFamily="monospace"
-                android:hint="e.g. 01001234567"
+                android:hint="@string/e_g_01001234567"
                 android:inputType="numberDecimal"
                 android:padding="8dp"
                 android:textSize="15sp" />
@@ -123,8 +123,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:paddingLeft="8dp"
-                android:text="Surname"
+                android:paddingLeft="12dp"
+                android:text="@string/surname"
                 android:textColor="@color/lightTextColor"
                 android:textSize="15sp" />
 
@@ -139,7 +139,7 @@
                 android:backgroundTint="@color/lightBackground"
                 android:ems="10"
                 android:fontFamily="monospace"
-                android:hint="e.g. ბაგრატიონი"
+                android:hint="@string/e_g"
                 android:inputType="textPersonName"
                 android:padding="8dp"
                 android:textSize="15sp" />
@@ -149,8 +149,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:paddingStart="8dp"
-                android:text="Password"
+                android:paddingStart="12dp"
+                android:text="@string/password"
                 android:textColor="@color/lightTextColor"
                 android:textSize="15sp" />
 
@@ -179,8 +179,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:paddingStart="8dp"
-                android:text="Phone Number"
+                android:paddingStart="12dp"
+                android:text="@string/phone_number"
                 android:textColor="@color/lightTextColor"
                 android:textSize="15sp" />
 
@@ -195,7 +195,7 @@
                 android:backgroundTint="@color/lightBackground"
                 android:ems="10"
                 android:fontFamily="monospace"
-                android:hint="e.g. +995597555555"
+                android:hint="@string/e_g_995597555555"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textSize="15sp" />
@@ -205,8 +205,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:paddingStart="8dp"
-                android:text="Enter Code"
+                android:paddingStart="12dp"
+                android:text="@string/enter_code"
                 android:textColor="@color/lightTextColor"
                 android:textSize="15sp" />
 
@@ -221,7 +221,7 @@
                 android:backgroundTint="@color/lightBackground"
                 android:ems="10"
                 android:fontFamily="monospace"
-                android:hint="e.g. 123456"
+                android:hint="@string/e_g_123456"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textSize="15sp" />
@@ -235,29 +235,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/button_background_shape"
-                android:text="submit" />
+                android:text="@string/submit" />
 
         </LinearLayout>
-
-
-        <!--        <EditText-->
-        <!--            android:id="@+id/editTextTextPersonName2"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginStart="8dp"-->
-        <!--            android:layout_marginTop="4dp"-->
-        <!--            android:layout_marginEnd="8dp"-->
-        <!--            android:background="@drawable/rounded_background"-->
-        <!--            android:backgroundTint="?attr/backgroundClr"-->
-        <!--            android:ems="10"-->
-        <!--            android:hint="a-z,A-Z,1-9"-->
-        <!--            android:inputType="textPassword"-->
-        <!--            android:padding="8dp"-->
-        <!--            android:textSize="16sp"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@+id/textView17" />-->
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
