--- a/app/src/main/res/layout/fragment_problems.xml
+++ b/app/src/main/res/layout/fragment_problems.xml
@@ -49,7 +49,7 @@
             android:drawableLeft="@drawable/arrow_up_down"
 
             android:padding="16dp"
-            android:text="Positive"
+            android:text="@string/positive"
             android:textColor="?attr/textClr"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -63,7 +63,7 @@
             android:drawableLeft="@drawable/arrow_up_down"
 
             android:padding="16dp"
-            android:text="Negative"
+            android:text="@string/negative"
             android:textColor="?attr/textClr"
             android:textSize="12sp"
             android:textStyle="bold" />
@@ -77,7 +77,7 @@
             android:drawableLeft="@drawable/arrow_up_down"
 
             android:padding="16dp"
-            android:text="Votes"
+            android:text="@string/votes"
             android:textColor="?attr/textClr"
             android:textSize="12sp"
             android:textStyle="bold" />
