--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,10 +22,12 @@
         android:id="@+id/about_you"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="cursive"
-        android:text="Tell a little bit about yourself"
+        android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="@string/tell_a_little_bit_about_yourself"
         android:textColor="?attr/textClr"
-        android:textSize="18sp"
+        android:textSize="16sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -51,7 +53,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Your gender"
+            android:text="@string/gender"
             android:textAlignment="viewStart"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
@@ -77,7 +79,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Region you belong"
+            android:text="@string/region"
             android:textAlignment="viewStart"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
@@ -106,7 +108,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Full Name"
+            android:text="@string/full_name"
             android:textAlignment="viewStart"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
@@ -136,7 +138,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Birth Date / Age"
+            android:text="@string/birth_date_age"
             android:textAlignment="viewStart"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
@@ -165,7 +167,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Address"
+            android:text="@string/address"
             android:textAlignment="viewStart"
             android:textColor="?attr/textClr"
             android:textSize="18sp"
@@ -199,9 +201,9 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_background_shape"
         android:fontFamily="sans-serif"
-        android:text="Save"
+        android:text="@string/save"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
