--- a/app/src/main/res/layout/holder_problem.xml
+++ b/app/src/main/res/layout/holder_problem.xml
@@ -29,9 +29,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_background"
         android:backgroundTint="@color/design_default_color_secondary_variant"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/problem">
